set container port

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,4 +4,4 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/proj2-298620/slack-bolt-weather:$SHORT_SHA']
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['beta', 'run', 'deploy', 'slack-bolt-weather', '--region=us-east1', '--platform=managed', '--image=gcr.io/proj2-298620/slack-bolt-weather:$SHORT_SHA']
+  args: ['beta', 'run', 'deploy', 'slack-bolt-weather', '--region=us-east1', '--platform=managed', '--port=3000', '--image=gcr.io/proj2-298620/slack-bolt-weather:$SHORT_SHA']
